Background changes to the current weather

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
     width: 100vw;
-    background-color: rgb(5, 94, 211);
+    background-color: rgb(19, 0, 128);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,17 +10,64 @@ body {
     padding: 0;
 }
 
+/* Background based off current Weather */
+.bg-clear-day {
+    background: linear-gradient(to bottom, #87CEEB, #E0F6FF);
+}
+
+.bg-clear-night {
+    background: linear-gradient(to bottom, #0c1445, #1a1a2e);
+}
+
+.bg-rain {
+    background: linear-gradient(to bottom, #4a5568, #718096);
+}
+
+.bg-snow {
+    background: linear-gradient(to bottom, #e0f2fe, #ffffff);
+}
+
+.bg-cloudy {
+    background: linear-gradient(to bottom, #718096, #a0aec0);
+}
+
+.bg-partly-cloudy-day {
+    background: linear-gradient(to bottom, #93c5fd, #dbeafe);
+}
+
+.bg-partly-cloudy-night {
+    background: linear-gradient(to bottom, #1e3a8a, #3b5998);
+}
+
+.bg-fog {
+    background: linear-gradient(to bottom, #9ca3af, #d1d5db);
+}
+
+.bg-windy {
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+}
+
+.bg-default {
+    background: linear-gradient(to bottom, #f0f0f0, #ffffff);
+}
+
 h1 {
     margin: 0;
     padding: 0;
 }
 
-.header,
+/*.header,
 #description,
 .location,
 .temp-display,
 .tempMain {
     border: 2px solid red;
+} */
+
+.location,
+.description {
+    display: flex;
+    align-items: center;
 }
 
 .user-input {
@@ -33,6 +80,17 @@ h1 {
     flex-direction: column;
     align-items: center;
     margin-bottom: 150px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.inputHeader {
+    font-size: 25px;
+    margin-top: 10px;
+}
+
+.inputSearch {
+    display: flex;
+    margin-top: 20px;
 }
 
 .main-content {
@@ -44,26 +102,28 @@ h1 {
     display: grid;
     grid-template-rows: 2fr 5fr;
     padding: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .header,
 .temp-display,
 .stats {
     border-radius: 15px;
+    background-color: rgb(0, 139, 219);
 }
 
 .header {
-    background-color: rgb(0, 217, 255);
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .location {
     font-size: 50px;
+    padding-left: 10px;
 }
 
 #description {
-    margin-left: 350px;
+    font-size: 25px;
 }
 
 .information {
@@ -75,7 +135,6 @@ h1 {
 
 /* Temperature Display */
 .temp-display {
-    background-color: rgb(0, 217, 255);
     display: grid;
     grid-template-columns: 4fr 1fr;
 }
@@ -107,5 +166,9 @@ h1 {
 }
 
 .stats {
-    background-color: rgb(0, 217, 255);
+    font-size: 20px;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
